--- a/utilities.css
+++ b/utilities.css
@@ -10,6 +10,7 @@
   display: flex;
   flex-direction: column;
   overflow-y: hidden;
+  overflow-x: hidden;
   width: 100vw;
   height: 100vh;
 
